Added a cursor hand icon to the draggable faucets.
Synchronized the light side view box depth with the wave size.
When a slider is disabled, its labels are also disabled.
Added rotation for sound waves (both wave view and particle view).
Dotted line is white in sound module for particle view.
Removed vertical tick labels from detector graphs.

New in 0.00.13 (5-19-2006)
Relabeled 'View Angle' to 'Rotate View'
Moved measuring tape in front of charts.
Removed vertical tick labels from charts.
Synchronized chart horizontal units & measuring tape units.
Vector view: arrows are fixed at zero (since it's in a graph).
When a barrier is present, it is shown in side view as behind the wave (water only).
Faucets are draggable.
Particle View:
    Reverted from one red particle to 5% red particles.
    Reduced particle size.
    Particles no longer go through the barrier wall.
Improved 3D speaker graphics.
Improved 3D laser graphics.
Changed connector wires to silver for faucets and laser.
Intensity Detectors now have a detachable (and reattachable) crosshairs.
Bugfix: Intensity Reader should read zero when off the lattice.
Added rotation of light waves.
    Asymmetric features are disabled in side view.
    Rotation of light waves is disabled when asymmetric.
Bugfix: Performance problem for particle view in 1.5 due to slow default interpolation style.
Bugfix: Frequency of zero crashes the audio subsystem.

New in 0.00.12 (5-15-2006)
Fixed a glitch in the intermediate rotation graphic that made edges not line up.
Photon Vector View:
    Reduced the number of vectors in photon vector view to about 1/3.
    Removed the black outline and have hollow vectors with a colored outline.
    The outline should be about twice as thick as it is now
    Removed the one black vector.

New in 0.00.10 (5-15-2006)
Photons are red by default.
Added a 'clear wave' button to each control panel.
Added audio to the sound module
Made rotation glyph cut off at cross section